# Car-Sales-Data-Engineering

./: .gitignore  Assignment.md  README.md  main.py  pyproject.toml
src/: analysis.py  main.py  ui.py
